--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 pandas
-torch==1.10.0
-transformers==4.8.2
-pytorch-lightning==1.3.8
+torch
+transformers
+pytorch-lightning
 streamlit==1.1.0
+fastparquet
